tests/fail/RemainderError.java
package fail;

import java.lang.System;

public class RemainderError {
    public static void main(String[] args) {
        System.out.println('a' % 42);
    }
}